// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`function InterviewerCallPattern() with data and invalid data > should match the snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="Breadcrumbs"
        class="ons-breadcrumbs"
      >
        <ol
          class="ons-breadcrumbs__items ons-u-fs-s"
        >
          <li
            class="ons-breadcrumbs__item"
            id="breadcrumb-0"
          >
            <a
              class="ons-breadcrumbs__link"
              data-discover="true"
              href="/"
            >
              Reports
            </a>
            <svg
              class="ons-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
          <li
            class="ons-breadcrumbs__item"
            id="breadcrumb-1"
          >
            <a
              class="ons-breadcrumbs__link"
              data-discover="true"
              href="/"
            >
              Interviewer details
            </a>
            <svg
              class="ons-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
          <li
            class="ons-breadcrumbs__item"
            id="breadcrumb-2"
          >
            <a
              class="ons-breadcrumbs__link"
              data-discover="true"
              href="/"
            >
              Questionnaires
            </a>
            <svg
              class="ons-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
        </ol>
      </nav>
      <main
        class="ons-page__main ons-u-mt-s"
        id="main-content"
      >
        <h1>
          Call Pattern Report
        </h1>
        <h3
          class="ons-u-mb-m"
        >
          Interviewer: 
          thorne1
          <br />
          Period: 
          31/01/2023
          –
          31/01/2024
          <br />
          Questionnaire:
           
          foo
        </h3>
        <p
          aria-live="polite"
          class="ons-u-fs-s u-mt-s"
        >
          Data in this report was last updated: 
          <b>
            <time
              datetime="2000-01-01T10:00:00.000Z"
              title="2000-01-01 10:00"
            >
              2 days ago
            </time>
             (01/01/2000 10:00:00)
          </b>
        </p>
        <p
          class="ons-u-fs-s"
        >
          Data in this report only goes back to the last 12 months.
        </p>
        <div
          class="ons-u-mb-m"
        >
          <div
            class="ons-panel ons-panel--info ons-panel--no-title ons-u-mt-m"
            id="panel-_r_4_"
          >
            <span
              class="ons-panel__assistive-text ons-u-vh"
            >
              Important information:
               
            </span>
            <div
              class="ons-panel__body "
            >
              <p>
                Incomplete data is removed from this report. This will impact the accuracy of the report.
              </p>
              <p>
                The 
                <b>
                  Discounted invalid records
                </b>
                 entry will advise how many records have been removed.
              </p>
              <p>
                Information will be displayed at the top of the report to advise which fields were incomplete.
              </p>
            </div>
          </div>
        </div>
        <br />
        <a
          download="interviewer-call-pattern-thorne1.csv"
          href="blob:mocked-url"
          target="_self"
        >
          Export report as Comma-Separated Values (CSV) file
        </a>
        <div
          class="ons-panel ons-panel--info ons-panel--no-title ons-u-mt-m"
          id="panel-_r_6_"
        >
          <span
            class="ons-panel__assistive-text ons-u-vh"
          >
            Important information:
             
          </span>
          <div
            class="ons-panel__body "
          >
            <p>
              Information: 
              29/162
               records (
              17.90
              %) were discounted due to the following invalid fields: 
              'status' column had timed out call status,'call_end_time' column had missing data
            </p>
          </div>
        </div>
        <div
          class="ons-summary ons-u-mt-m"
        >
          <div
            class="ons-summary__group"
            id="report-table"
          >
            <div
              class="ons-summary"
            >
              <div
                class="ons-summary__group"
              >
                <h2
                  class="ons-summary__group-title"
                >
                  Call times
                </h2>
                <dl
                  class="ons-summary__items"
                >
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Hours worked
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        26:58:07
                      </span>
                    </dd>
                  </div>
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Call time
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        01:31:32
                      </span>
                    </dd>
                  </div>
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Hours on calls percentage
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        5.66%
                      </span>
                    </dd>
                  </div>
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Average calls per hour
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        3.86
                      </span>
                    </dd>
                  </div>
                </dl>
              </div>
              <div
                class="ons-summary__group"
              >
                <h2
                  class="ons-summary__group-title"
                >
                  Call status
                </h2>
                <dl
                  class="ons-summary__items"
                >
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Refusals
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        4/133, 3.01%
                      </span>
                    </dd>
                  </div>
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Completed successfully
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        0/133, 0.00%
                      </span>
                    </dd>
                  </div>
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Appointments for contacts
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        81/133, 60.90%
                      </span>
                    </dd>
                  </div>
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Web nudge
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        5/133, 3.76%
                      </span>
                    </dd>
                  </div>
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        No contacts
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        11/133, 8.27%
                      </span>
                    </dd>
                  </div>
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Discounted invalid cases
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        29/162, 17.90%
                      </span>
                    </dd>
                  </div>
                </dl>
              </div>
              <div
                class="ons-summary__group"
              >
                <h2
                  class="ons-summary__group-title"
                >
                  Breakdown of No Contact calls
                </h2>
                <dl
                  class="ons-summary__items"
                >
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Answer service
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        4/11, 36.36%
                      </span>
                    </dd>
                  </div>
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Busy
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        1/11, 9.09%
                      </span>
                    </dd>
                  </div>
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Disconnect
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        2/11, 18.18%
                      </span>
                    </dd>
                  </div>
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        No answer
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        3/11, 27.27%
                      </span>
                    </dd>
                  </div>
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Invalid telephone number
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        5/11, 45.45%
                      </span>
                    </dd>
                  </div>
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Other
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        4/11, 36.36%
                      </span>
                    </dd>
                  </div>
                </dl>
              </div>
            </div>
          </div>
        </div>
        <br />
      </main>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="Breadcrumbs"
      class="ons-breadcrumbs"
    >
      <ol
        class="ons-breadcrumbs__items ons-u-fs-s"
      >
        <li
          class="ons-breadcrumbs__item"
          id="breadcrumb-0"
        >
          <a
            class="ons-breadcrumbs__link"
            data-discover="true"
            href="/"
          >
            Reports
          </a>
          <svg
            class="ons-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
        <li
          class="ons-breadcrumbs__item"
          id="breadcrumb-1"
        >
          <a
            class="ons-breadcrumbs__link"
            data-discover="true"
            href="/"
          >
            Interviewer details
          </a>
          <svg
            class="ons-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
        <li
          class="ons-breadcrumbs__item"
          id="breadcrumb-2"
        >
          <a
            class="ons-breadcrumbs__link"
            data-discover="true"
            href="/"
          >
            Questionnaires
          </a>
          <svg
            class="ons-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
      </ol>
    </nav>
    <main
      class="ons-page__main ons-u-mt-s"
      id="main-content"
    >
      <h1>
        Call Pattern Report
      </h1>
      <h3
        class="ons-u-mb-m"
      >
        Interviewer: 
        thorne1
        <br />
        Period: 
        31/01/2023
        –
        31/01/2024
        <br />
        Questionnaire:
         
        foo
      </h3>
      <p
        aria-live="polite"
        class="ons-u-fs-s u-mt-s"
      >
        Data in this report was last updated: 
        <b>
          <time
            datetime="2000-01-01T10:00:00.000Z"
            title="2000-01-01 10:00"
          >
            2 days ago
          </time>
           (01/01/2000 10:00:00)
        </b>
      </p>
      <p
        class="ons-u-fs-s"
      >
        Data in this report only goes back to the last 12 months.
      </p>
      <div
        class="ons-u-mb-m"
      >
        <div
          class="ons-panel ons-panel--info ons-panel--no-title ons-u-mt-m"
          id="panel-_r_4_"
        >
          <span
            class="ons-panel__assistive-text ons-u-vh"
          >
            Important information:
             
          </span>
          <div
            class="ons-panel__body "
          >
            <p>
              Incomplete data is removed from this report. This will impact the accuracy of the report.
            </p>
            <p>
              The 
              <b>
                Discounted invalid records
              </b>
               entry will advise how many records have been removed.
            </p>
            <p>
              Information will be displayed at the top of the report to advise which fields were incomplete.
            </p>
          </div>
        </div>
      </div>
      <br />
      <a
        download="interviewer-call-pattern-thorne1.csv"
        href="blob:mocked-url"
        target="_self"
      >
        Export report as Comma-Separated Values (CSV) file
      </a>
      <div
        class="ons-panel ons-panel--info ons-panel--no-title ons-u-mt-m"
        id="panel-_r_6_"
      >
        <span
          class="ons-panel__assistive-text ons-u-vh"
        >
          Important information:
           
        </span>
        <div
          class="ons-panel__body "
        >
          <p>
            Information: 
            29/162
             records (
            17.90
            %) were discounted due to the following invalid fields: 
            'status' column had timed out call status,'call_end_time' column had missing data
          </p>
        </div>
      </div>
      <div
        class="ons-summary ons-u-mt-m"
      >
        <div
          class="ons-summary__group"
          id="report-table"
        >
          <div
            class="ons-summary"
          >
            <div
              class="ons-summary__group"
            >
              <h2
                class="ons-summary__group-title"
              >
                Call times
              </h2>
              <dl
                class="ons-summary__items"
              >
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Hours worked
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      26:58:07
                    </span>
                  </dd>
                </div>
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Call time
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      01:31:32
                    </span>
                  </dd>
                </div>
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Hours on calls percentage
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      5.66%
                    </span>
                  </dd>
                </div>
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Average calls per hour
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      3.86
                    </span>
                  </dd>
                </div>
              </dl>
            </div>
            <div
              class="ons-summary__group"
            >
              <h2
                class="ons-summary__group-title"
              >
                Call status
              </h2>
              <dl
                class="ons-summary__items"
              >
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Refusals
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      4/133, 3.01%
                    </span>
                  </dd>
                </div>
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Completed successfully
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      0/133, 0.00%
                    </span>
                  </dd>
                </div>
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Appointments for contacts
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      81/133, 60.90%
                    </span>
                  </dd>
                </div>
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Web nudge
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      5/133, 3.76%
                    </span>
                  </dd>
                </div>
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      No contacts
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      11/133, 8.27%
                    </span>
                  </dd>
                </div>
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Discounted invalid cases
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      29/162, 17.90%
                    </span>
                  </dd>
                </div>
              </dl>
            </div>
            <div
              class="ons-summary__group"
            >
              <h2
                class="ons-summary__group-title"
              >
                Breakdown of No Contact calls
              </h2>
              <dl
                class="ons-summary__items"
              >
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Answer service
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      4/11, 36.36%
                    </span>
                  </dd>
                </div>
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Busy
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      1/11, 9.09%
                    </span>
                  </dd>
                </div>
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Disconnect
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      2/11, 18.18%
                    </span>
                  </dd>
                </div>
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      No answer
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      3/11, 27.27%
                    </span>
                  </dd>
                </div>
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Invalid telephone number
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      5/11, 45.45%
                    </span>
                  </dd>
                </div>
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Other
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      4/11, 36.36%
                    </span>
                  </dd>
                </div>
              </dl>
            </div>
          </div>
        </div>
      </div>
      <br />
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`function InterviewerCallPattern() with happy data > should match the snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="Breadcrumbs"
        class="ons-breadcrumbs"
      >
        <ol
          class="ons-breadcrumbs__items ons-u-fs-s"
        >
          <li
            class="ons-breadcrumbs__item"
            id="breadcrumb-0"
          >
            <a
              class="ons-breadcrumbs__link"
              data-discover="true"
              href="/"
            >
              Reports
            </a>
            <svg
              class="ons-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
          <li
            class="ons-breadcrumbs__item"
            id="breadcrumb-1"
          >
            <a
              class="ons-breadcrumbs__link"
              data-discover="true"
              href="/"
            >
              Interviewer details
            </a>
            <svg
              class="ons-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
          <li
            class="ons-breadcrumbs__item"
            id="breadcrumb-2"
          >
            <a
              class="ons-breadcrumbs__link"
              data-discover="true"
              href="/"
            >
              Questionnaires
            </a>
            <svg
              class="ons-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
        </ol>
      </nav>
      <main
        class="ons-page__main ons-u-mt-s"
        id="main-content"
      >
        <h1>
          Call Pattern Report
        </h1>
        <h3
          class="ons-u-mb-m"
        >
          Interviewer: 
          thorne1
          <br />
          Period: 
          31/01/2023
          –
          31/01/2024
          <br />
          Questionnaire:
           
          foo
        </h3>
        <p
          aria-live="polite"
          class="ons-u-fs-s u-mt-s"
        >
          Data in this report was last updated: 
          <b>
            <time
              datetime="2000-01-01T10:00:00.000Z"
              title="2000-01-01 10:00"
            >
              2 days ago
            </time>
             (01/01/2000 10:00:00)
          </b>
        </p>
        <p
          class="ons-u-fs-s"
        >
          Data in this report only goes back to the last 12 months.
        </p>
        <div
          class="ons-u-mb-m"
        >
          <div
            class="ons-panel ons-panel--info ons-panel--no-title ons-u-mt-m"
            id="panel-_r_0_"
          >
            <span
              class="ons-panel__assistive-text ons-u-vh"
            >
              Important information:
               
            </span>
            <div
              class="ons-panel__body "
            >
              <p>
                Incomplete data is removed from this report. This will impact the accuracy of the report.
              </p>
              <p>
                The 
                <b>
                  Discounted invalid records
                </b>
                 entry will advise how many records have been removed.
              </p>
              <p>
                Information will be displayed at the top of the report to advise which fields were incomplete.
              </p>
            </div>
          </div>
        </div>
        <br />
        <a
          download="interviewer-call-pattern-thorne1.csv"
          href="blob:mocked-url"
          target="_self"
        >
          Export report as Comma-Separated Values (CSV) file
        </a>
        <div
          class="ons-summary ons-u-mt-m"
        >
          <div
            class="ons-summary__group"
            id="report-table"
          >
            <div
              class="ons-summary"
            >
              <div
                class="ons-summary__group"
              >
                <h2
                  class="ons-summary__group-title"
                >
                  Call times
                </h2>
                <dl
                  class="ons-summary__items"
                >
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Hours worked
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        26:58:07
                      </span>
                    </dd>
                  </div>
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Call time
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        01:31:32
                      </span>
                    </dd>
                  </div>
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Hours on calls percentage
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        5.66%
                      </span>
                    </dd>
                  </div>
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Average calls per hour
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        3.86
                      </span>
                    </dd>
                  </div>
                </dl>
              </div>
              <div
                class="ons-summary__group"
              >
                <h2
                  class="ons-summary__group-title"
                >
                  Call status
                </h2>
                <dl
                  class="ons-summary__items"
                >
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Refusals
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        4/133, 3.01%
                      </span>
                    </dd>
                  </div>
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Completed successfully
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        0/133, 0.00%
                      </span>
                    </dd>
                  </div>
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Appointments for contacts
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        81/133, 60.90%
                      </span>
                    </dd>
                  </div>
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Web nudge
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        5/133, 3.76%
                      </span>
                    </dd>
                  </div>
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        No contacts
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        11/133, 8.27%
                      </span>
                    </dd>
                  </div>
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Discounted invalid cases
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        0/133, 0.00%
                      </span>
                    </dd>
                  </div>
                </dl>
              </div>
              <div
                class="ons-summary__group"
              >
                <h2
                  class="ons-summary__group-title"
                >
                  Breakdown of No Contact calls
                </h2>
                <dl
                  class="ons-summary__items"
                >
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Answer service
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        4/11, 36.36%
                      </span>
                    </dd>
                  </div>
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Busy
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        1/11, 9.09%
                      </span>
                    </dd>
                  </div>
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Disconnect
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        2/11, 18.18%
                      </span>
                    </dd>
                  </div>
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        No answer
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        3/11, 27.27%
                      </span>
                    </dd>
                  </div>
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Invalid telephone number
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        5/11, 45.45%
                      </span>
                    </dd>
                  </div>
                  <div
                    class="ons-summary__item"
                  >
                    <dt
                      class="ons-summary__item-title"
                    >
                      <div
                        class="ons-summary__item--text"
                      >
                        Other
                      </div>
                    </dt>
                    <dd
                      class="ons-summary__values"
                    >
                      <span
                        class="ons-summary__text"
                      >
                        4/11, 36.36%
                      </span>
                    </dd>
                  </div>
                </dl>
              </div>
            </div>
          </div>
        </div>
        <br />
      </main>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="Breadcrumbs"
      class="ons-breadcrumbs"
    >
      <ol
        class="ons-breadcrumbs__items ons-u-fs-s"
      >
        <li
          class="ons-breadcrumbs__item"
          id="breadcrumb-0"
        >
          <a
            class="ons-breadcrumbs__link"
            data-discover="true"
            href="/"
          >
            Reports
          </a>
          <svg
            class="ons-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
        <li
          class="ons-breadcrumbs__item"
          id="breadcrumb-1"
        >
          <a
            class="ons-breadcrumbs__link"
            data-discover="true"
            href="/"
          >
            Interviewer details
          </a>
          <svg
            class="ons-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
        <li
          class="ons-breadcrumbs__item"
          id="breadcrumb-2"
        >
          <a
            class="ons-breadcrumbs__link"
            data-discover="true"
            href="/"
          >
            Questionnaires
          </a>
          <svg
            class="ons-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
      </ol>
    </nav>
    <main
      class="ons-page__main ons-u-mt-s"
      id="main-content"
    >
      <h1>
        Call Pattern Report
      </h1>
      <h3
        class="ons-u-mb-m"
      >
        Interviewer: 
        thorne1
        <br />
        Period: 
        31/01/2023
        –
        31/01/2024
        <br />
        Questionnaire:
         
        foo
      </h3>
      <p
        aria-live="polite"
        class="ons-u-fs-s u-mt-s"
      >
        Data in this report was last updated: 
        <b>
          <time
            datetime="2000-01-01T10:00:00.000Z"
            title="2000-01-01 10:00"
          >
            2 days ago
          </time>
           (01/01/2000 10:00:00)
        </b>
      </p>
      <p
        class="ons-u-fs-s"
      >
        Data in this report only goes back to the last 12 months.
      </p>
      <div
        class="ons-u-mb-m"
      >
        <div
          class="ons-panel ons-panel--info ons-panel--no-title ons-u-mt-m"
          id="panel-_r_0_"
        >
          <span
            class="ons-panel__assistive-text ons-u-vh"
          >
            Important information:
             
          </span>
          <div
            class="ons-panel__body "
          >
            <p>
              Incomplete data is removed from this report. This will impact the accuracy of the report.
            </p>
            <p>
              The 
              <b>
                Discounted invalid records
              </b>
               entry will advise how many records have been removed.
            </p>
            <p>
              Information will be displayed at the top of the report to advise which fields were incomplete.
            </p>
          </div>
        </div>
      </div>
      <br />
      <a
        download="interviewer-call-pattern-thorne1.csv"
        href="blob:mocked-url"
        target="_self"
      >
        Export report as Comma-Separated Values (CSV) file
      </a>
      <div
        class="ons-summary ons-u-mt-m"
      >
        <div
          class="ons-summary__group"
          id="report-table"
        >
          <div
            class="ons-summary"
          >
            <div
              class="ons-summary__group"
            >
              <h2
                class="ons-summary__group-title"
              >
                Call times
              </h2>
              <dl
                class="ons-summary__items"
              >
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Hours worked
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      26:58:07
                    </span>
                  </dd>
                </div>
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Call time
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      01:31:32
                    </span>
                  </dd>
                </div>
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Hours on calls percentage
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      5.66%
                    </span>
                  </dd>
                </div>
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Average calls per hour
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      3.86
                    </span>
                  </dd>
                </div>
              </dl>
            </div>
            <div
              class="ons-summary__group"
            >
              <h2
                class="ons-summary__group-title"
              >
                Call status
              </h2>
              <dl
                class="ons-summary__items"
              >
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Refusals
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      4/133, 3.01%
                    </span>
                  </dd>
                </div>
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Completed successfully
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      0/133, 0.00%
                    </span>
                  </dd>
                </div>
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Appointments for contacts
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      81/133, 60.90%
                    </span>
                  </dd>
                </div>
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Web nudge
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      5/133, 3.76%
                    </span>
                  </dd>
                </div>
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      No contacts
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      11/133, 8.27%
                    </span>
                  </dd>
                </div>
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Discounted invalid cases
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      0/133, 0.00%
                    </span>
                  </dd>
                </div>
              </dl>
            </div>
            <div
              class="ons-summary__group"
            >
              <h2
                class="ons-summary__group-title"
              >
                Breakdown of No Contact calls
              </h2>
              <dl
                class="ons-summary__items"
              >
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Answer service
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      4/11, 36.36%
                    </span>
                  </dd>
                </div>
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Busy
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      1/11, 9.09%
                    </span>
                  </dd>
                </div>
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Disconnect
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      2/11, 18.18%
                    </span>
                  </dd>
                </div>
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      No answer
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      3/11, 27.27%
                    </span>
                  </dd>
                </div>
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Invalid telephone number
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      5/11, 45.45%
                    </span>
                  </dd>
                </div>
                <div
                  class="ons-summary__item"
                >
                  <dt
                    class="ons-summary__item-title"
                  >
                    <div
                      class="ons-summary__item--text"
                    >
                      Other
                    </div>
                  </dt>
                  <dd
                    class="ons-summary__values"
                  >
                    <span
                      class="ons-summary__text"
                    >
                      4/11, 36.36%
                    </span>
                  </dd>
                </div>
              </dl>
            </div>
          </div>
        </div>
      </div>
      <br />
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`function InterviewerCallPattern() with only invalid data > should match the snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="Breadcrumbs"
        class="ons-breadcrumbs"
      >
        <ol
          class="ons-breadcrumbs__items ons-u-fs-s"
        >
          <li
            class="ons-breadcrumbs__item"
            id="breadcrumb-0"
          >
            <a
              class="ons-breadcrumbs__link"
              data-discover="true"
              href="/"
            >
              Reports
            </a>
            <svg
              class="ons-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
          <li
            class="ons-breadcrumbs__item"
            id="breadcrumb-1"
          >
            <a
              class="ons-breadcrumbs__link"
              data-discover="true"
              href="/"
            >
              Interviewer details
            </a>
            <svg
              class="ons-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
          <li
            class="ons-breadcrumbs__item"
            id="breadcrumb-2"
          >
            <a
              class="ons-breadcrumbs__link"
              data-discover="true"
              href="/"
            >
              Questionnaires
            </a>
            <svg
              class="ons-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
        </ol>
      </nav>
      <main
        class="ons-page__main ons-u-mt-s"
        id="main-content"
      >
        <h1>
          Call Pattern Report
        </h1>
        <h3
          class="ons-u-mb-m"
        >
          Interviewer: 
          thorne1
          <br />
          Period: 
          31/01/2023
          –
          31/01/2024
          <br />
          Questionnaire:
           
          foo
        </h3>
        <p
          aria-live="polite"
          class="ons-u-fs-s u-mt-s"
        >
          Data in this report was last updated: 
          <b>
            <time
              datetime="2000-01-01T10:00:00.000Z"
              title="2000-01-01 10:00"
            >
              2 days ago
            </time>
             (01/01/2000 10:00:00)
          </b>
        </p>
        <p
          class="ons-u-fs-s"
        >
          Data in this report only goes back to the last 12 months.
        </p>
        <div
          class="ons-u-mb-m"
        >
          <div
            class="ons-panel ons-panel--info ons-panel--no-title ons-u-mt-m"
            id="panel-_r_g_"
          >
            <span
              class="ons-panel__assistive-text ons-u-vh"
            >
              Important information:
               
            </span>
            <div
              class="ons-panel__body "
            >
              <p>
                Incomplete data is removed from this report. This will impact the accuracy of the report.
              </p>
              <p>
                The 
                <b>
                  Discounted invalid records
                </b>
                 entry will advise how many records have been removed.
              </p>
              <p>
                Information will be displayed at the top of the report to advise which fields were incomplete.
              </p>
            </div>
          </div>
        </div>
        <br />
        <div
          class="ons-panel ons-panel--info ons-panel--no-title ons-u-mt-m"
          id="panel-_r_i_"
        >
          <span
            class="ons-panel__assistive-text ons-u-vh"
          >
            Important information:
             
          </span>
          <div
            class="ons-panel__body "
          >
            <p>
              Information: 
              100/100
               records (
              100.00
              %) were discounted due to the following invalid fields: 
              'status' column had timed out call status,'call_end_time' column had missing data
            </p>
          </div>
        </div>
        <br />
      </main>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="Breadcrumbs"
      class="ons-breadcrumbs"
    >
      <ol
        class="ons-breadcrumbs__items ons-u-fs-s"
      >
        <li
          class="ons-breadcrumbs__item"
          id="breadcrumb-0"
        >
          <a
            class="ons-breadcrumbs__link"
            data-discover="true"
            href="/"
          >
            Reports
          </a>
          <svg
            class="ons-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
        <li
          class="ons-breadcrumbs__item"
          id="breadcrumb-1"
        >
          <a
            class="ons-breadcrumbs__link"
            data-discover="true"
            href="/"
          >
            Interviewer details
          </a>
          <svg
            class="ons-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
        <li
          class="ons-breadcrumbs__item"
          id="breadcrumb-2"
        >
          <a
            class="ons-breadcrumbs__link"
            data-discover="true"
            href="/"
          >
            Questionnaires
          </a>
          <svg
            class="ons-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
      </ol>
    </nav>
    <main
      class="ons-page__main ons-u-mt-s"
      id="main-content"
    >
      <h1>
        Call Pattern Report
      </h1>
      <h3
        class="ons-u-mb-m"
      >
        Interviewer: 
        thorne1
        <br />
        Period: 
        31/01/2023
        –
        31/01/2024
        <br />
        Questionnaire:
         
        foo
      </h3>
      <p
        aria-live="polite"
        class="ons-u-fs-s u-mt-s"
      >
        Data in this report was last updated: 
        <b>
          <time
            datetime="2000-01-01T10:00:00.000Z"
            title="2000-01-01 10:00"
          >
            2 days ago
          </time>
           (01/01/2000 10:00:00)
        </b>
      </p>
      <p
        class="ons-u-fs-s"
      >
        Data in this report only goes back to the last 12 months.
      </p>
      <div
        class="ons-u-mb-m"
      >
        <div
          class="ons-panel ons-panel--info ons-panel--no-title ons-u-mt-m"
          id="panel-_r_g_"
        >
          <span
            class="ons-panel__assistive-text ons-u-vh"
          >
            Important information:
             
          </span>
          <div
            class="ons-panel__body "
          >
            <p>
              Incomplete data is removed from this report. This will impact the accuracy of the report.
            </p>
            <p>
              The 
              <b>
                Discounted invalid records
              </b>
               entry will advise how many records have been removed.
            </p>
            <p>
              Information will be displayed at the top of the report to advise which fields were incomplete.
            </p>
          </div>
        </div>
      </div>
      <br />
      <div
        class="ons-panel ons-panel--info ons-panel--no-title ons-u-mt-m"
        id="panel-_r_i_"
      >
        <span
          class="ons-panel__assistive-text ons-u-vh"
        >
          Important information:
           
        </span>
        <div
          class="ons-panel__body "
        >
          <p>
            Information: 
            100/100
             records (
            100.00
            %) were discounted due to the following invalid fields: 
            'status' column had timed out call status,'call_end_time' column had missing data
          </p>
        </div>
      </div>
      <br />
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`function InterviewerCallPattern() with request error > should match the snapshot 1`] = `undefined`;

exports[`function InterviewerCallPattern() without data > should match the snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="Breadcrumbs"
        class="ons-breadcrumbs"
      >
        <ol
          class="ons-breadcrumbs__items ons-u-fs-s"
        >
          <li
            class="ons-breadcrumbs__item"
            id="breadcrumb-0"
          >
            <a
              class="ons-breadcrumbs__link"
              data-discover="true"
              href="/"
            >
              Reports
            </a>
            <svg
              class="ons-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
          <li
            class="ons-breadcrumbs__item"
            id="breadcrumb-1"
          >
            <a
              class="ons-breadcrumbs__link"
              data-discover="true"
              href="/"
            >
              Interviewer details
            </a>
            <svg
              class="ons-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
          <li
            class="ons-breadcrumbs__item"
            id="breadcrumb-2"
          >
            <a
              class="ons-breadcrumbs__link"
              data-discover="true"
              href="/"
            >
              Questionnaires
            </a>
            <svg
              class="ons-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
        </ol>
      </nav>
      <main
        class="ons-page__main ons-u-mt-s"
        id="main-content"
      >
        <h1>
          Call Pattern Report
        </h1>
        <h3
          class="ons-u-mb-m"
        >
          Interviewer: 
          thorne1
          <br />
          Period: 
          31/01/2023
          –
          31/01/2024
          <br />
          Questionnaire:
           
          foo
        </h3>
        <p
          aria-live="polite"
          class="ons-u-fs-s u-mt-s"
        >
          Data in this report was last updated: 
          <b>
            Invalid Date
          </b>
        </p>
        <p
          class="ons-u-fs-s"
        >
          Data in this report only goes back to the last 12 months.
        </p>
        <div
          class="ons-u-mb-m"
        >
          <div
            class="ons-panel ons-panel--info ons-panel--no-title ons-u-mt-m"
            id="panel-_r_a_"
          >
            <span
              class="ons-panel__assistive-text ons-u-vh"
            >
              Important information:
               
            </span>
            <div
              class="ons-panel__body "
            >
              <p>
                Incomplete data is removed from this report. This will impact the accuracy of the report.
              </p>
              <p>
                The 
                <b>
                  Discounted invalid records
                </b>
                 entry will advise how many records have been removed.
              </p>
              <p>
                Information will be displayed at the top of the report to advise which fields were incomplete.
              </p>
            </div>
          </div>
        </div>
        <br />
        <div
          class="ons-panel ons-panel--info ons-panel--no-title ons-u-mt-m"
          id="panel-_r_c_"
        >
          <span
            class="ons-panel__assistive-text ons-u-vh"
          >
            Important information:
             
          </span>
          <div
            class="ons-panel__body "
          >
            No data found for parameters given.
          </div>
        </div>
        <br />
      </main>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="Breadcrumbs"
      class="ons-breadcrumbs"
    >
      <ol
        class="ons-breadcrumbs__items ons-u-fs-s"
      >
        <li
          class="ons-breadcrumbs__item"
          id="breadcrumb-0"
        >
          <a
            class="ons-breadcrumbs__link"
            data-discover="true"
            href="/"
          >
            Reports
          </a>
          <svg
            class="ons-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
        <li
          class="ons-breadcrumbs__item"
          id="breadcrumb-1"
        >
          <a
            class="ons-breadcrumbs__link"
            data-discover="true"
            href="/"
          >
            Interviewer details
          </a>
          <svg
            class="ons-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
        <li
          class="ons-breadcrumbs__item"
          id="breadcrumb-2"
        >
          <a
            class="ons-breadcrumbs__link"
            data-discover="true"
            href="/"
          >
            Questionnaires
          </a>
          <svg
            class="ons-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
      </ol>
    </nav>
    <main
      class="ons-page__main ons-u-mt-s"
      id="main-content"
    >
      <h1>
        Call Pattern Report
      </h1>
      <h3
        class="ons-u-mb-m"
      >
        Interviewer: 
        thorne1
        <br />
        Period: 
        31/01/2023
        –
        31/01/2024
        <br />
        Questionnaire:
         
        foo
      </h3>
      <p
        aria-live="polite"
        class="ons-u-fs-s u-mt-s"
      >
        Data in this report was last updated: 
        <b>
          Invalid Date
        </b>
      </p>
      <p
        class="ons-u-fs-s"
      >
        Data in this report only goes back to the last 12 months.
      </p>
      <div
        class="ons-u-mb-m"
      >
        <div
          class="ons-panel ons-panel--info ons-panel--no-title ons-u-mt-m"
          id="panel-_r_a_"
        >
          <span
            class="ons-panel__assistive-text ons-u-vh"
          >
            Important information:
             
          </span>
          <div
            class="ons-panel__body "
          >
            <p>
              Incomplete data is removed from this report. This will impact the accuracy of the report.
            </p>
            <p>
              The 
              <b>
                Discounted invalid records
              </b>
               entry will advise how many records have been removed.
            </p>
            <p>
              Information will be displayed at the top of the report to advise which fields were incomplete.
            </p>
          </div>
        </div>
      </div>
      <br />
      <div
        class="ons-panel ons-panel--info ons-panel--no-title ons-u-mt-m"
        id="panel-_r_c_"
      >
        <span
          class="ons-panel__assistive-text ons-u-vh"
        >
          Important information:
           
        </span>
        <div
          class="ons-panel__body "
        >
          No data found for parameters given.
        </div>
      </div>
      <br />
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
